--- a/View/MainView.xaml
+++ b/View/MainView.xaml
@@ -1,4 +1,4 @@
-﻿<mah:MetroWindow x:Class="HarbourLauncher_Reloaded.MainWindow"
+﻿<Page x:Class="HarbourLauncher_Reloaded.View.MainView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,19 +7,16 @@
         xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
         xmlns:iconPacks="clr-namespace:MahApps.Metro.IconPacks;assembly=MahApps.Metro.IconPacks.FontAwesome" 
         xmlns:converters="clr-namespace:MahApps.Metro.IconPacks.Converter;assembly=MahApps.Metro.IconPacks.Core"
-        xmlns:local="clr-namespace:HarbourLauncher_Reloaded"
-        WindowStartupLocation="CenterScreen"
-        GlowBrush="{DynamicResource MahApps.Brushes.Accent}"
-        ResizeMode="CanMinimize"
-        TitleCharacterCasing="Normal"
+        xmlns:local="clr-namespace:HarbourLauncher_Reloaded.View"
+        Style="{DynamicResource MahApps.Styles.Page}"
         Title="Harbour Launcher"
         mc:Ignorable="d"
         Height="450" Width="800">
     <Grid>
-        <!--<Grid.Background>
-            <ImageBrush ImageSource="images/index.png" Opacity="0.45"></ImageBrush>
+        <Grid.Background>
+            <ImageBrush ImageSource="/images/index.png" Opacity="0.45"></ImageBrush>
         </Grid.Background>
-        
+
         <mah:FlipView x:Name="IndexFlips"
               Height="151"
               Width="504"
@@ -29,23 +26,23 @@
             <mah:FlipView.Items>
                 <Grid>
                     <Grid.Background>
-                        <ImageBrush ImageSource="images/flips1.png"></ImageBrush>
+                        <ImageBrush ImageSource="/images/flips1.png"></ImageBrush>
                     </Grid.Background>
                 </Grid>
                 <Grid>
                     <Grid.Background>
-                        <ImageBrush ImageSource="images/flips2.png"></ImageBrush>
+                        <ImageBrush ImageSource="/images/flips2.png"></ImageBrush>
                     </Grid.Background>
                 </Grid>
                 <Grid>
                     <Grid.Background>
-                        <ImageBrush ImageSource="images/flips3.png"></ImageBrush>
+                        <ImageBrush ImageSource="/images/flips3.png"></ImageBrush>
                     </Grid.Background>
                 </Grid>
             </mah:FlipView.Items>
         </mah:FlipView>
 
-        
+
         <mah:FlyoutsControl Panel.ZIndex="10">
             <mah:Flyout x:Name="GameSettingsFlyOuts" Header="启动设置" Position="Right" Width="330" IsOpen="{Binding IsAboutFlyoutOpen}">
                 <Grid>
@@ -141,9 +138,7 @@
             <iconPacks:PackIconFontAwesome Width="40"
                                     Height="40"
                                     Kind="GamepadSolid" />
-        </Controls:Tile>-->
-        <ContentControl x:Name="CC">
-            
-        </ContentControl>
+        </Controls:Tile>
+
     </Grid>
-</mah:MetroWindow>
+</Page>
